Fix search bar z-index during hamburger menu

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,5 +1,6 @@
 .search {
   position: relative;
+  z-index: -1;
 
   display: grid;
   place-items: center;
